# orgize-sync

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: conf.rs  error.rs  logger.rs  main.rs
src/google/: api.rs  auth.rs  mod.rs  models.rs
src/toggl/: mod.rs
