[package]
name = "orgize-sync"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "Sync your Org with your favorite applications."
repository = "https://github.com/PoiScript/orgize-sync"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["orgmode", "google_calendar", "toggl"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["dotenv", "google_calendar", "toggl"]
google_calendar = ["chrono-tz"]
toggl = []

[dependencies]
app_dirs = "1.2.1"
async-std = "1.0.1"
chrono = { version = "0.4.9", features = ["serde"] }
chrono-tz = { version = "0.5", optional = true }
colored = "1.8.0"
dotenv = { version = "0.15.0", optional = true }
isahc = { version = "0.9.6", default-features = false, features = ["json"] }
log = "0.4.8"
orgize = { version = "0.7.0", default-features = false, features = ["chrono"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.1"
